--- a/app/src/main/res/layout/weather_items.xml
+++ b/app/src/main/res/layout/weather_items.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/movie_poster"
+        android:layout_width="120dp"
+        android:layout_height="155dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_collapseMode="parallax"
+        app:srcCompat="@mipmap/ic_launcher" />
+
 
     <TextView
         android:id="@+id/textKota"
@@ -13,14 +27,16 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="@string/name" />
+        android:text="@string/name"
+        android:textColor="@color/white"/>
     <TextView
         android:id="@+id/textTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:text="@string/temperature" />
+        android:text="@string/temperature"
+        android:textColor="@color/white"/>
     <TextView
         android:id="@+id/textDesc"
         android:layout_width="wrap_content"
@@ -28,5 +44,6 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:text="@string/description" />
+        android:text="@string/description"
+        android:textColor="@color/white"/>
 </LinearLayout>
