--- a/app/src/main/res/layout/weather_items.xml
+++ b/app/src/main/res/layout/weather_items.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/movie_poster"
-        android:layout_width="120dp"
-        android:layout_height="155dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
